force-app/main/default/objects/Booking_Passenger__c/Booking_Passenger__c.object-meta.xml
<CustomObject>
    <label>Booking Passenger</label>
    <nameField>
        <label>Booking Passenger Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Booking Passengers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>