force-app/main/default/objects/Booking_Passenger__c/fields/Bus_Booking__c.field-meta.xml
<CustomField>
    <fullName>Bus_Booking__c</fullName>
    <label>Bus Booking</label>
    <referenceTo>Bus_Booking__c</referenceTo>
    <relationshipLabel>Booking Passengers</relationshipLabel>
    <relationshipName>Booking_Passengers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>