force-app/main/default/objects/Booking_Passenger__c/fields/Bus_Seat__c.field-meta.xml
<CustomField>
    <fullName>Bus_Seat__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Bus Seat</label>
    <referenceTo>Bus_Seat__c</referenceTo>
    <relationshipLabel>Booking Passengers</relationshipLabel>
    <relationshipName>Booking_Passengers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>