force-app/main/default/objects/Booking_Passenger__c/validationRules/Age_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Age_Check</fullName>
    <active>true</active>
    <errorConditionFormula>OR(Age__c &lt; 1, Age__c &gt; 120)</errorConditionFormula>
    <errorDisplayField>Age__c</errorDisplayField>
    <errorMessage>Age must be between 1 and 100.</errorMessage>
</ValidationRule>