force-app/main/default/objects/Booking_Passenger__c/validationRules/Primary_Contact_Info.validationRule-meta.xml
<ValidationRule>
    <fullName>Primary_Contact_Info</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Is_Primary_Contact__c = TRUE, ISBLANK(Email__c))</errorConditionFormula>
    <errorDisplayField>Email__c</errorDisplayField>
    <errorMessage>Email is required when Is Primary Contact is selected.</errorMessage>
</ValidationRule>